sqlite/test/corpus/table_options.txt
================================================================================
SQLite: CREATE TABLE WITHOUT ROWID
================================================================================

CREATE TABLE t (id INT) WITHOUT ROWID;

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (int
            (keyword_int))))
      (keyword_without)
      (keyword_rowid))))

================================================================================
SQLite: CREATE TABLE STRICT
================================================================================

CREATE TABLE t (id INT) STRICT;

--------------------------------------------------------------------------------

(program
  (statement
    (create_table
      (keyword_create)
      (keyword_table)
      (object_reference
        name: (identifier))
      (column_definitions
        (column_definition
          name: (identifier)
          type: (int
            (keyword_int))))
      (keyword_strict))))

================================================================================
SQLite: VACUUM INTO
================================================================================

VACUUM INTO '/tmp/backup.db';

--------------------------------------------------------------------------------

(program
  (statement
    (vacuum_statement
      (keyword_vacuum)
      (keyword_into)
      path: (literal))))

================================================================================
SQLite: REINDEX bare
================================================================================

REINDEX;

--------------------------------------------------------------------------------

(program
  (statement
    (reindex_statement
      (keyword_reindex))))

================================================================================
SQLite: REINDEX table
================================================================================

REINDEX my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (reindex_statement
      (keyword_reindex)
      name: (object_reference
        name: (identifier)))))
